# appgen

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  appgen.config.yaml  config.py  genapp.py  package-lock.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  framework_request.md
.github/workflows/: ci.yml  release.yml
appgen/: __init__.py  appgen.config.yaml  cli.py  config.py  framework_selector.py  project_manager.py  ui_helper.py
generator/: generate.py
templates/astrojs/base/: package-lock.json  package.json
templates/django/base/: .env.example  README.md  manage.py  requirements.txt
templates/django/base/project/: asgi.py  settings.py  wsgi.py
templates/express/base/: package.json
templates/express/base/src/: index.js
templates/express/mongodb/: .env.example  README.md  package.json
templates/express/mongodb/src/: index.js
templates/express/postgresql/: README.md  env.example  package.json
templates/express/postgresql/src/: index.js
templates/express/serverless/: env.json  package.json  template.yaml
templates/express/supabase/: README.md  env.example  package.json
templates/express/supabase/src/: index.js
templates/express/typescript/: package.json
templates/express/typescript/src/: index.ts
templates/flask/base/: requirements.txt
templates/flask/base/app/: main.py
templates/nextjs/app/: next.config.js  package.json
templates/nextjs/app-prisma/: .env.example  package.json
templates/nextjs/app-prisma/app/: page.tsx
templates/nextjs/app-prisma/app/api/users/: route.ts
templates/nextjs/app-shadcn/: package.json
templates/nextjs/app-t3/: .env.example  package.json  tailwind.config.ts  tsconfig.json
templates/nextjs/app-t3/app/: layout.tsx  page.tsx
templates/nextjs/app-t3/app/api/trpc/[trpc]/: route.ts
templates/nextjs/app-t3/src/: env.mjs
templates/nextjs/app-t3/src/server/: auth.ts
templates/nextjs/app-t3/src/server/api/: root.ts  trpc.ts
templates/nextjs/app-t3/src/server/api/routers/: _app.ts  example.ts
templates/nextjs/app-t3/src/utils/: api.ts
templates/nextjs/app-tailwind/: package.json
templates/nextjs/app-typescript/: package.json
templates/nextjs/app-typescript/app/: layout.tsx  page.tsx
templates/nextjs/app/app/: layout.js  page.js
templates/nextjs/app/styles/: globals.css
templates/nextjs/pages/: next.config.js  package.json
templates/nextjs/pages-typescript/pages/: index.tsx
templates/nextjs/pages/pages/: index.js
templates/nextjs/pages/styles/: globals.css
templates/reactjs/base/: index.html  package.json
templates/reactjs/base/src/: index.jsx
templates/reactjs/tailwind/: package.json
templates/reactjs/typescript/: package.json
templates/reactjs/typescript/src/: index.tsx
templates/serverless/go/: .gitignore  README.md  env.json  template.yaml
templates/serverless/go/src/: go.mod  main.go
templates/serverless/javascript/: .env.example
templates/serverless/javascript/src/: index.js
templates/serverless/python/: README.md
templates/serverless/python/src/: handler.py
templates/strapi/base/: .env  package.json
templates/svelte/base/: .eslintrc.cjs  .prettierrc  README.md  package.json  tsconfig.json
templates/svelte/base/src/: app.css
templates/svelte/base/src/routes/: +layout.svelte  +page.svelte
tests/: __init__.py  test_cli.py  test_config.py
